# etymonline_downloader

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
etymonline_downloader/: __init__.py  cli.py  download_pages.py  etymonline_downloader.py  words_process.py
tests/: __init__.py  test_etymonline_downloader.py
