[tool]
[tool.poetry]
name = "etymonline_downloader"
version = "0.1.0"
homepage = "https://github.com/keagud/etymonline_downloader"
description = "Top-level package for Etymonline_Downloader."
authors = ["Keaton Guderian <keagud@protonmail.com>"]
readme = "README.md"
license =  "0BSD"
classifiers=[
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "etymonline_downloader" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"

[tool.poetry.group.dev.dependencies]
coverage = "*"
isort = "*"
pyright = "*"
ruff = "*"

pre-commit = "*"
black = "*"



[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
force-exclude = true
exclude = [".venv", "__init__.py"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
